# deltafeedback

./: .gitignore  CMakeLists.txt  README.md  README_ru.md  config.example.ini
.github/workflows/: deb.yml
packaging/: build-deb.sh  control.in  deltafeedback.service  postinst  postrm  preinst  prerm
src/: main.cpp
src/app/: config.cpp  config.h
src/db/: database.cpp  database.h  messages.cpp  messages.h  queries.h  replay.cpp  replay.h  state.cpp  state.h  statement.cpp  statement.h  tickets.cpp  tickets.h
src/dc/: admin_parse.cpp  admin_parse.h  admin_route.cpp  admin_route.h  bot.cpp  bot.h  sender.cpp  sender.h
src/feedback/: service.cpp  service.h  validator.cpp  validator.h
src/pow/: challenge.cpp  challenge.h  sha256.cpp  sha256.h
src/server/: ratelimit.cpp  ratelimit.h  server.cpp  server.h
tests/: CMakeLists.txt  admin_parse_test.cpp  admin_route_test.cpp  db_fixture.h  messages_test.cpp  pow_challenge_test.cpp  pow_sha256_test.cpp  replay_test.cpp  service_test.cpp  state_test.cpp  statement_test.cpp  tickets_test.cpp  validator_test.cpp
web/: app.js  i18n.js  index.html  sha256.js  style.css  welcome.en.html  welcome.ru.html
web/locales/: en.json  ru.json
